# task-manager-llm

./: .gitignore  README.md  plan.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a4fa96f1d6db_initial_tasks_table.py
backend/app/: config.py  db.py  errors.py  main.py  models.py  schemas.py
backend/app/repositories/: tasks.py
backend/app/routers/: llm.py  tasks.py
backend/app/services/: llm.py  tasks.py
backend/tests/: conftest.py  test_api_llm.py  test_api_tasks.py  test_integrity.py  test_llm_service.py
docs/superpowers/specs/: 2026-04-14-task-manager-llm-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  llm.ts  tasks.ts
frontend/src/components/: DeleteDialog.tsx  FilterBar.tsx  LLMActions.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/components/ui/: Button.tsx  Dialog.tsx  Input.tsx  Select.tsx  Skeleton.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/lib/: constants.ts
